--- a/PhoneBook.vbproj
+++ b/PhoneBook.vbproj
@@ -43,4 +43,8 @@
     </None>
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Guna.UI2.WinForms" Version="2.0.1.4" />
+  </ItemGroup>
+
 </Project>
